--- a/index.html
+++ b/index.html
@@ -13,12 +13,31 @@
     <link rel="stylesheet" href="style.css">
     <!-- Turf.js -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+    <!-- D3 -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
+    <!-- ELEMENTS  CONTAINER -->
+    <div class="map-heading">
+        <h1>Hexgrid Web Map of Traffic Collisions in Toronto Involving Pedestrians and Cyclists</h1>
+    </div>
+
+    <div id="legend" class="legend">
+        <h3>Number of Collisions</h3>
+        <div class="gradient-box"></div>
+        <span class="minlabel"></span>
+        <span class="maxlabel"></span>
+    </div>
+
+    <div class='map-overlay'>
+        <button type="button" class="btn btn-primary btn-sm" id="bboxbutton">Bounding box</button>
+    </div>
 
     <!-- MAP CONTAINER -->
     <div id='map' class='map'></div>
+
+    
 
     <script src="script.js"></script>
 
